--- a/config/nginx.config
+++ b/config/nginx.config
@@ -44,7 +44,7 @@ http {
     root         /var/www/public;
 
     location / {
-        try_files $uri /index.html;
+        #try_files $uri /index.html;
     }
   }
 }
